Fix flash, alignment in community selector

--- a/client/styles/components/sidebar/community_selector.scss
+++ b/client/styles/components/sidebar/community_selector.scss
@@ -5,6 +5,10 @@
         border: none !important;
         border-radius: 0 !important;
     }
+    .title-selector .ChainIcon {
+        position: relative;
+        top: 1px;
+    }
 }
 
 .CommunitySelectList {
